Project3/force-app/main/default/objects/Project__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Give the details of the project.</description>
    <inlineHelpText>Give the details of the project.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>